--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>2048</title>
     <link rel="stylesheet" type="text/css" href="2048.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"></script>
+<!--     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"></script>-->
+    <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="support2048.js"></script>
     <script type="text/javascript" src="main2048.js"></script>
     <script type="text/javascript" src="showanimation.js"></script>
