--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>2048</title>
     <link rel="stylesheet" type="text/css" href="2048.css">
-<!--     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"></script>-->
-    <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"></script>
     <script type="text/javascript" src="support2048.js"></script>
     <script type="text/javascript" src="main2048.js"></script>
     <script type="text/javascript" src="showanimation.js"></script>
